--- a/templates/index.html
+++ b/templates/index.html
@@ -102,44 +102,6 @@
         <img id="titleimage" src="/logos/title.png" alt=""  style="height: 100vh; width: 100%">
         <br>
     </div>
-
-    <center>
-        <h1>Why InAds?</h1>
-        <br>
-        <h1>100M+ Traffic Monthly Traffic | Show your ads to over 100 million people.</h1>
-        <br>
-        <h3>Make money from your website</h3>
-        <p style="margin-right: 10%; margin-left: 10%;">Unlike many advertising networks, InAds adopts a no commission policy.
-            With no commission or extra fees on your income and make 20 Cents per click.
-            Your income will skyrocket after switching to InAds.</p>
-        <br>
-        <h3>Cheaper Cost of Advertising</h3>
-        <p style="margin-right: 10%; margin-left: 10%;">Thanks to our unique no commission model,
-            advertisers pay less and enjoy the same benefits for a lower price as well. Also, instead of paying a
-            an advertisement network your are directly supporting online content creators.</p>
-        <br>
-        <h3>Easy Integration, Secure Payments</h3>
-        <p style="margin-right: 10%; margin-left: 10%;">
-            Through copy-pasting a single line of code you connect to the InAds global network and start monetizing your content.
-            Through adding simple HTML elements you can have unlimited customisation over the size and place of the advertisements on your webpage.
-        </p>
-        <br>
-        <h3>Cannot be blocked by ad blockers</h3>
-        <p style="margin-right: 10%; margin-left: 10%;">
-            So you are ready to monetize your web page through ads however many people today are using ad blockers which makes it impossible for you to generate advertising revenue.
-            However, InAds has your back its unique ad insertion policy makes it impossible for ad blockers to detect ads and thus makes ads impossible to block.
-        </p>
-        <br>
-        <h3>Number of ads matter</h3>
-        <p style="margin-right: 10%; margin-left: 10%;">Unlike Google Adsense's or many other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
-    </center>
-    <center style="background-color: rgb(230, 230, 235); height: 40%; margin-top: 5%">
-        <p style="opacity: 0">InAds</p>
-        <h4 style="margin-top: 3%">SKYROCKET YOUR INCOME</h4>
-        <h1 style="margin-top: 3%">Calculate your estimated income</h1>
-        <button class="buttonGray" onclick="document.location = '/estimated_earnings'">Calculate</button>
-        <p style="opacity: 0; margin-top: 3%">InAds</p>
-    </center>
     <div class="graph-cont">
         <h1>Avg. InAds CPC vs. Avg. Other Networks CPC</h1>
         InAds: <div class="bar bar1">0.005 USD</div>
@@ -164,6 +126,50 @@
         </center>
     </div>
     <br style="clear: both">
+
+
+    <center style="background-color: rgb(230, 230, 235); height: 40%; margin-top: 15%">
+        <p style="opacity: 0">InAds</p>
+        <h4 style="margin-top: 3%">SKYROCKET YOUR INCOME</h4>
+        <h1 style="margin-top: 3%">Calculate your estimated income</h1>
+        <button class="buttonGray" onclick="document.location = '/estimated_earnings'">Calculate</button>
+        <p style="opacity: 0; margin-top: 3%">InAds</p>
+    </center>
+    <div>
+        <h1>Why InAds?</h1>
+        <br>
+        <h1>100M+ Traffic Monthly Traffic | Show your ads to over 100 million people.</h1>
+        <br>
+        <img style="float: right; margin-right: 5%" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <h1 style="margin-top: 5%;%">Make money from your website</h1>
+        <p style="margin-left: 10%; margin-right: 25%;">Unlike many advertising networks, InAds adopts a no commission policy.
+            With no commission or extra fees on your income and make 20 Cents per click.
+            Your income will skyrocket after switching to InAds.</p>
+        <br>
+        <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <h1 style="margin-top: 20%; margin-left: 2%">Cheaper Cost of Advertising</h1>
+        <p style="margin-right: 10%;">Thanks to our unique no commission model,
+            advertisers pay less and enjoy the same benefits for a lower price as well. Also, instead of paying a
+            an advertisement network your are directly supporting online content creators.</p>
+        <br>
+        <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <h1 style="margin-top: 20%; margin-left: 2%">Easy Integration, Secure Payments</h1>
+        <p style="margin-right: 10%; margin-left: 10%;">
+            Through copy-pasting a single line of code you connect to the InAds global network and start monetizing your content.
+            Through adding simple HTML elements you can have unlimited customisation over the size and place of the advertisements on your webpage.
+        </p>
+        <br>
+        <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <h1 style="margin-top: 20%; margin-left: 2%">Cannot be blocked by ad blockers</h1>
+        <p style="margin-right: 10%; margin-left: 10%;">
+            So you are ready to monetize your web page through ads however many people today are using ad blockers which makes it impossible for you to generate advertising revenue.
+            However, InAds has your back its unique ad insertion policy makes it impossible for ad blockers to detect ads and thus makes ads impossible to block.
+        </p>
+        <br>
+        <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <h1 style="margin-top: 20%; margin-left: 2%">Number of ads matter</h1>
+        <p style="margin-right: 10%; margin-left: 10%;">Unlike Google Adsense's or many other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
+    </div>
     <center style="margin-top: 10%; margin-left: 20%; margin-right: 20%; clear: both">
         <h1>Copy and paste a single line of code and place the ads on your website to 5x your income.</h1>
         <button style="margin-top: 5%; margin-bottom: 5%" class="buttonBlue" onclick="document.location = '/register'">Start Now</button>
@@ -177,7 +183,7 @@
 
     <script>
         if(window.innerWidth < window.innerHeight){
-            document.getElementById("infoDiv").style.marginLeft = "40px";
+            document.getElementById("infoDiv").style.marginLeft = "25px";
             document.getElementById("titleimage").setAttribute('src', "/logos/titlemobile.png");
         }
     </script>
