--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
         <br>
         <h1>100M+ Traffic Monthly Traffic | Show your ads to over 100 million people.</h1>
         <br>
-        <img style="float: right; margin-right: 5%" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <img style="float: right; margin-right: 5%" src="/logos/exampleone.jpg" alt="">
         <h1 style="margin-top: 5%;%">Make money from your website</h1>
         <p style="margin-left: 10%; margin-right: 25%;">Unlike many advertising networks, InAds adopts a no commission policy.
             With no commission or extra fees on your income and make 20 Cents per click.
@@ -159,7 +159,7 @@
             Through adding simple HTML elements you can have unlimited customisation over the size and place of the advertisements on your webpage.
         </p>
         <br>
-        <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="/logos/adblock.jpg" alt="">
         <h1 style="margin-top: 20%; margin-left: 2%">Cannot be blocked by ad blockers</h1>
         <p style="margin-right: 10%; margin-left: 10%;">
             So you are ready to monetize your web page through ads however many people today are using ad blockers which makes it impossible for you to generate advertising revenue.
@@ -168,7 +168,7 @@
         <br>
         <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
         <h1 style="margin-top: 20%; margin-left: 2%">Number of ads matter</h1>
-        <p style="margin-right: 10%; margin-left: 10%;">Unlike Google Adsense's or many other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
+        <p style="margin-right: 10%; margin-left: 10%;">Unlike other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
     </div>
     <center style="margin-top: 10%; margin-left: 20%; margin-right: 20%; clear: both">
         <h1>Copy and paste a single line of code and place the ads on your website to 5x your income.</h1>
