--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,7 @@
             advertisers pay less and enjoy the same benefits for a lower price as well. Also, instead of paying a
             an advertisement network your are directly supporting online content creators.</p>
         <br>
-        <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="/logos/js-logo.png" alt="">
         <h1 style="margin-top: 20%; margin-left: 2%">Easy Integration, Secure Payments</h1>
         <p style="margin-right: 10%; margin-left: 10%;">
             Through copy-pasting a single line of code you connect to the InAds global network and start monetizing your content.
