--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
             With no commission or extra fees on your income and make 20 Cents per click.
             Your income will skyrocket after switching to InAds.</p>
         <br>
-        <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F5438631?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" alt="">
+        <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="/logos/advertising2.png" alt="">
         <h1 style="margin-top: 20%; margin-left: 2%">Cheaper Cost of Advertising</h1>
         <p style="margin-right: 10%;">Thanks to our unique no commission model,
             advertisers pay less and enjoy the same benefits for a lower price as well. Also, instead of paying a
