--- a/templates/index.html
+++ b/templates/index.html
@@ -143,13 +143,13 @@
         <img style="float: right; margin-right: 5%" src="/logos/exampleone.jpg" alt="">
         <h1 style="margin-top: 5%;%">Make money from your website</h1>
         <p style="margin-left: 10%; margin-right: 25%;">Unlike many advertising networks, InAds adopts a no commission policy.
-            With no commission or extra fees on your income and make 20 Cents per click.
+            With no commission or extra fees on your income you can enjoy the staggering increase in your revenue.
             Your income will skyrocket after switching to InAds.</p>
         <br>
         <img style="float: left; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="/logos/advertising2.png" alt="">
         <h1 style="margin-top: 20%; margin-left: 2%">Cheaper Cost of Advertising</h1>
         <p style="margin-right: 10%;">Thanks to our unique no commission model,
-            advertisers pay less and enjoy the same benefits for a lower price as well. Also, instead of paying a
+            advertisers pay less and enjoy the same benefits for a lower price. Also, instead of paying
             an advertisement network your are directly supporting online content creators.</p>
         <br>
         <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="/logos/js-logo.png" alt="">
