--- a/templates/status.html
+++ b/templates/status.html
@@ -33,7 +33,7 @@
         <h2>InAds Global Network Status</h2>
         <h3>Server Running: <span style="color: green">&check;</span></h3>
         <h3>Website Updated: <span style="color: green">&check;</span></h3>
-        <h3>Adequate number of ads are online: <span style="color: green">&check;</span></h3>
+        <h3>Adequate number of ads are online: <span style="color: red">X</span></h3>
         <h3>Client Website Connections: <span style="color: green">&check;</span></h3>
         <h3>Dashboard: <span style="color: green">&check;</span></h3>
         <h3>Database Connections: <span style="color: green">&check;</span></h3>
