--- a/templates/partners.html
+++ b/templates/partners.html
@@ -51,6 +51,11 @@
             <center><a style="color: black; text-decoration: none" href="https://thelega.com">Thelega</a></center>
         </div>
         <div style="float: left; width: 20%; margin-left: 2%">
+            <img src="/logos/sampledigital.png" style="width: 100%" alt="">
+            <br>
+            <center><a style="color: black; text-decoration: none" href="https://www.sampledigitallab.com">SampleDigitalLab</a></center>
+        </div>
+        <div style="float: left; width: 20%; margin-left: 2%">
             <img src="/logos/egbilisim.png" style="width: 100%" alt="">
             <br>
             <center><a style="color: black; text-decoration: none" href="http://egbilisim.com.tr">EG Bilişim</a></center>
