--- a/templates/docs.html
+++ b/templates/docs.html
@@ -47,6 +47,9 @@
         <h3>Square Ad Group</h3>
         <p>A square ad group is four square ads placed side to side to optimize earnings. You can quadruple your earnings by using an ad group without increasing the amount of ad space on your website.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupsquare">&lt;/div></p>
+        <h3>Ad Feed</h3>
+        <p>An ad feed is an ad area with 2 Square ad groups and a standard ad at the bottom. </p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">InAds with Unity</a>
         <div id="InAdsUnity" hidden="true">
             <h3>How to use InAds with Unity</h3>
@@ -84,6 +87,9 @@
         <h3>Kare Reklam Grubu</h3>
         <p>Bir kare reklam grubu 4 tane kare reklamın yan yana yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanımını sağlar ve gelirinizi 4 katına çıkartır.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupsquare">&lt;/div></p>
+        <h3>Ad Feed</h3>
+        <p>Bir ad feed 2 kare reklam grubu ve bir standard reklamdan oluşan bir reklam oluşumudur.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
             <h3>InAds Unity ile nasıl kullanılır?</h3>
