--- a/templates/docs.html
+++ b/templates/docs.html
@@ -48,7 +48,7 @@
         <p>A square ad group is four square ads placed side to side to optimize earnings. You can quadruple your earnings by using an ad group without increasing the amount of ad space on your website.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupsquare">&lt;/div></p>
         <h3>Ad Feed</h3>
-        <p>An ad feed is an ad area with 2 Square ad groups and a standard ad at the bottom. </p>
+        <p>An ad feed is an optimized ad gallery including multiple ad types.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">InAds with Unity</a>
         <div id="InAdsUnity" hidden="true">
@@ -88,7 +88,7 @@
         <p>Bir kare reklam grubu 4 tane kare reklamın yan yana yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanımını sağlar ve gelirinizi 4 katına çıkartır.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupsquare">&lt;/div></p>
         <h3>Ad Feed</h3>
-        <p>Bir ad feed 2 kare reklam grubu ve bir standard reklamdan oluşan bir reklam oluşumudur.</p>
+        <p>Farklı reklam türlerinden oluşan optimize edilmiş reklam galerisi</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
