--- a/templates/partners.html
+++ b/templates/partners.html
@@ -60,6 +60,11 @@
             <br>
             <center><a style="color: black; text-decoration: none" href="http://egbilisim.com.tr">EG Bilişim</a></center>
         </div>
+        <div style="float: left; width: 20%; margin-left: 2%">
+            <img src="/logos/digitalexc.png" style="width: 100%" alt="">
+            <br>
+            <center><a style="color: black; text-decoration: none" href="http://digitalexchange.com.tr">Digital Exchange</a></center>
+        </div>
     </div>
 </body>
 </html>
