--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -155,20 +155,20 @@
                         {% endfor %}
                     </p>
                     <form method="post">
-                        <input class="mainFormBig" style="width: 100%" type=text name=keywords placeholder="Change keywords (Keywords with '/' in between.)">
+                        <input class="mainFormBig" style="width: 100%" type=text name=keywords placeholder="Change keywords (Keywords with '/' in between.). To restrict websites from showing this ad add a new keyword with the format !domain">
                         <hr>
                         <br>
                         <input class="buttonBlue" style="width: 40%" type=submit value="Change Keywords">
                         <br>
                         <br>
                         <br>
-                        <input class="mainFormBig" style="width: 100%" type=text name=bannedwebsites placeholder="Blacklisted Websites for this ad: (Websites with '/' in between.)">
-                        <hr>
-                        <br>
-                        <input class="buttonBlue" style="width: 40%" type=submit value="Send Blacklist Request">
-                        <br>
-                        <br>
-                        <br>
+                        <input class="mainFormBig" style="width: 100%" type=text name=bannedwebsites placeholder="Blacklisted Websites for this ad: (Websites with '/' in between.)" hidden>
+                        <hr hidden>
+                        <br hidden>
+                        <input class="buttonBlue" style="width: 40%" type=submit value="Send Blacklist Request" hidden>
+                        <br hidden>
+                        <br hidden>
+                        <br hidden>
                         <input class="mainFormBig" style="width: 100%" type=number name=budgetinc placeholder="Increase ad budget">
                         <hr>
                         <br>
