--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -155,8 +155,9 @@
                         {% endfor %}
                     </p>
                     <form method="post">
-                        <input class="mainFormBig" style="width: 100%; font-size: 24px" type=text name=keywords placeholder="Change keywords (Keywords with '/' in between.). To restrict websites from showing this ad add a new keyword with the format !domain">
+                        <input class="mainFormBig" style="width: 100%; font-size: 24px" type=text name=keywords placeholder="Change keywords (Keywords with '/' in between.).">
                         <hr>
+                        <small>To restrict websites from showing this ad add a new keyword with the format !domain</small>
                         <br>
                         <input class="buttonBlue" style="width: 40%" type=submit value="Change Keywords">
                         <br>
