--- a/templates/ad_report.html
+++ b/templates/ad_report.html
@@ -20,8 +20,8 @@
     </center>
     <div style="margin-top: 3%">
         <form method=post enctype=multipart/form-data id="formMain">
-            <h3>Reporting ad with {{ adid }} id number.</h3>
             <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=text name=reason id="reason" placeholder="Tell us why?">
+            <small style="margin-left: 40%; margin-right:35%">Reporting ad with {{ adid }} id number.</small>
             <hr style="margin-left: 40%; margin-right:35%">
             <input class="buttonGray" style="margin-left: 40%" type="submit" value="Submit">
         </form>
