--- a/templates/loadmoney.html
+++ b/templates/loadmoney.html
@@ -20,6 +20,8 @@
             <br>
             <a style="margin-top: 10%" href="/account" class="navbarElement">Account</a>
             <br>
+            <a style="margin-top: 10%" href="/status" class="navbarElement">Technical Status</a>
+            <br>
             {% if user.purpose == "Content Creator" %}
             <a style="margin-top: 10%" href="/add_domain" class="navbarElement">Add Domain</a>
             <br>
