--- a/templates/status.html
+++ b/templates/status.html
@@ -19,6 +19,8 @@
             <br>
             <a style="margin-top: 10%" href="/account" class="navbarElement">Account</a>
             <br>
+            <a style="margin-top: 10%" href="/status" class="navbarElement">Technical Status</a>
+            <br>
             {% if user.purpose == "Content Creator" %}
             <a style="margin-top: 10%" href="/add_domain" class="navbarElement">Add Domain</a>
             <br>
@@ -33,11 +35,12 @@
         <h2>InAds Global Network Status</h2>
         <h3>Server Running: <span style="color: green">&check;</span></h3>
         <h3>Website Updated: <span style="color: green">&check;</span></h3>
-        <h3>Adequate number of ads are online: <span style="color: red">X</span></h3>
+        <h3>Adequate number of ads are online: <span style="color: green">&check;</span></h3>
         <h3>Client Website Connections: <span style="color: green">&check;</span></h3>
         <h3>Dashboard: <span style="color: green">&check;</span></h3>
         <h3>Database Connections: <span style="color: green">&check;</span></h3>
         <h3>Website Analytics: <span style="color: green">&check;</span></h3>
         <h3>Database Connection Pool: <span style="color: green">&check;</span></h3>
+        <p>Due to a misconfiguration in the Targeting AI all ads are paused temporarily to protect campaigns from low CTRs. The Technical Team is currently working on the issue and it will be solved as soon as possible.</p>
     </div>
 </body>
