--- a/templates/domainadd.html
+++ b/templates/domainadd.html
@@ -37,6 +37,8 @@
         <br>
         Download <a href="/confirmationfile">confirmation file</a>
         <br>
+        To obtain API key for browser extension enter extension as domain name
+        <br>
         <form method=post enctype=multipart/form-data style="margin-top: 5%">
             <input class="mainFormBig" type=text name=domain placeholder="Domain name with subdomain">
             <hr>
