--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,6 +22,8 @@
             <a style="margin-top: 10%" href="/status" class="navbarElement">Technical Status</a>
             <br>
             {% if user.purpose == "Content Creator" %}
+            <a style="margin-top: 10%" href="/docs" class="navbarElement">Ads Implementation</a>
+            <br>
             <a style="margin-top: 10%" href="/add_domain" class="navbarElement">Add Domain</a>
             <br>
             <a style="margin-top: 10%" href="/payout" class="navbarElement">Receive Payout</a>
