--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,7 @@
             <a style="margin-top: 10%" href="/status" class="navbarElement">Technical Status</a>
             <br>
             {% if user.purpose == "Content Creator" %}
-            <a style="margin-top: 10%" href="/docs" class="navbarElement">Ads Implementation</a>
+            <a style="margin-top: 10%" href="/docs" class="navbarElement">Ads Integration</a>
             <br>
             <a style="margin-top: 10%" href="/add_domain" class="navbarElement">Add Domain</a>
             <br>
