--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -110,7 +110,7 @@
     <a href="https://www.inadsglobal.com/presentation/intro/3925">Presentation</a>
 
     <h3>InAds Extension</h3>
-    InAds also created a browser extension enabling us to directly reach the end user and collect larger amounts of data. By using this extension users can monetise their data production. Insert ads in the web pages that visit according to their data and enable them to make money while literally surfing the web or scrolling through social media. Our clients can make up to 250 USD / month just by simply adding our extension also, we use native advertising for extension users meaning that ads will never annoy them by blocking their content.
+    InAds also created a browser extension enabling us to directly reach the end user and collect larger amounts of data. By using this extension users can monetise their data production. We insert ads in the web pages they visit according to their data and enable them to make money while literally surfing the web or scrolling through social media. Our clients can make up to 250 USD / month just by simply adding our extension also, we use native advertising for extension users meaning that ads will never annoy them by blocking their content. Another unique InAds feature.
 
 </body>
 </html>
