--- a/templates/docs.html
+++ b/templates/docs.html
@@ -50,6 +50,9 @@
         <h3>Ad Feed</h3>
         <p>An ad feed is an optimized ad gallery including multiple ad types.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
+        <h3>Scroll Group</h3>
+        <p>A Scroll Group is an optimised ad gallery targeted for mobile devices.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupscroll">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">InAds with Unity</a>
         <div id="InAdsUnity" hidden="true">
             <h3>How to use InAds with Unity</h3>
@@ -90,6 +93,9 @@
         <h3>Ad Feed</h3>
         <p>Farklı reklam türlerinden oluşan optimize edilmiş reklam galerisi</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
+        <h3>Scroll Grubu</h3>
+        <p>Bir scroll grubu mobil cihazlar için optimize edilmiş bir reklam galerisi tipidir.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupscroll">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
             <h3>InAds Unity ile nasıl kullanılır?</h3>
