--- a/templates/docs.html
+++ b/templates/docs.html
@@ -93,9 +93,15 @@
         <h3>Ad Feed</h3>
         <p>Farklı reklam türlerinden oluşan optimize edilmiş reklam galerisi</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsfeed">&lt;/div></p>
+        <h3>Vertical Group</h3>
+        <p>Dikey 1x4 reklam grubu. 4 kare reklamdan oluşur.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupvertical">&lt;/div></p>
         <h3>Scroll Grubu</h3>
         <p>Bir scroll grubu mobil cihazlar için optimize edilmiş bir reklam galerisi tipidir.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupscroll">&lt;/div></p>
+        <h3>Small Scroll Grubu</h3>
+        <p>2x2 Scroll grubunun dikey olarak küçültülmüş halidir. 2x1 boyutunda bir scroll grubudur.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupscrollsmall">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
             <h3>InAds Unity ile nasıl kullanılır?</h3>
