--- a/templates/docs.html
+++ b/templates/docs.html
@@ -102,6 +102,9 @@
         <h3>Small Scroll Grubu</h3>
         <p>2x2 Scroll grubunun dikey olarak küçültülmüş halidir. 2x1 boyutunda bir scroll grubudur.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupscrollsmall">&lt;/div></p>
+        <h3>Horizontal Standard Grubu</h3>
+        <p>4x1 standart reklamlardan oluşan yatay reklam grubu. Yalnızca masaüstü cihazlar için kullanıma uygundur.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgrouphorizontal">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
             <h3>InAds Unity ile nasıl kullanılır?</h3>
