--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -30,7 +30,7 @@
     <hr>
     <h3>General Info</h3>
 
-    <h4>Number of monthly visitors:~1 billion</h4>
+    <h4>Number of monthly visitors:~32 billion / Unique Reach: ~20 million</h4>
     <h4>Avg. CPM: 0,03</h4>
     <h4>Avg. CPC: 0,005</h4>
     <h4>Avg. CTR: 1,25%</h4>
@@ -38,19 +38,10 @@
     <h3>Finances</h3>
 
     <h4>Number of Shares: 2000</h4>
-    <h4>Pre-Money Valuation: 1,000,000$</h4>
+    <h4>Pre-Money Valuation: 88,000,000$</h4>
 
-    <h4>Last Month Revenue: 20.457TRY(2500USD)</h4>
-    <h4>Last Month Spending: 19.732TRY(~2409USD)</h4>
-
+    <h4>Est. Month Revenue: 1.612.800TRY(192.000USD)</h4>
     <hr>
-
-    <h3>Breakdown of Spendings</h3>
-    <ul>
-        <li>Marketing & First Time Advertising Bonuses: 8.753TRY(1069USD)</li>
-        <li>Server & Storage(Google Cloud & Heroku): 10.979TRY(1341USD)</li>
-    </ul>
-
 
     <h3>What problems we solve?</h3>
     <ul>
@@ -82,7 +73,7 @@
     <ul>
         <li>Taboola - Unpopular Ad Formats and Higher Pricing</li>
         <li>Google Ads - Higher Pricing</li>
-        <li>PropellerAds - Low Traffic, Unpopular Ad Formats</li>
+        <li>PropellerAds - Low Traffic, Unpopular Ad Formats, Affiliate marketing(not a direct competitor)</li>
     </ul>
 
     <h3>Advantages</h3>
