--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -18,12 +18,10 @@
     <br>
     Get information on advertising with InAds at <a href="https://www.inadsglobal.com/presentation/intro/3925">Presentation</a>
     <br>
-    Take a look at our advertising partners: <a href="https://www.inadsglobal.com/partners">Partners</a>
-    <br>
 
     <h3>Revenue Model</h3>
 
-    Revenue model is what makes InAds unique. There are no commissions or fees when advertising or monetising with InAds. InAds generates revenue through giving advertising loans to advertisers and generates long term revenue through interest. This is not only a revenue model but also, a competitive advantage since digital marketers can advertise to millions of people without spending a single dollar and pay back when their business starts growing.
+    Low commission with higher volume target.
 
     <h3>How do we collect debts?</h3>
     We make our borrowers sign a debt contract which enables us to take legal action when required. No risks involved.
