--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -60,8 +60,8 @@
 
     <h3>Market Adoption</h3>
     <ul>
-        <li><a href="/partners">Partners</a></li>
-        <li>1 billion traffic.</li>
+        <li>Some of the biggest websites/newspapers in the region</li>
+        <li>~32 billion traffic.</li>
     </ul>
 
     <h3>Competition</h3>
