--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -85,7 +85,7 @@
 
     <h3>Team</h3>
 
-    We are a team of 5 software engineers, we can setup a zoom or google meets meeting to meet the team personally.
+    We are a team of 5 software engineers. 3 Executives and a office manager. For more information on our team you can request a meeting with each individual through mailing us at contact@inadsglobal.com.
 
     <h3>Market Size</h3>
 
