--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -85,7 +85,7 @@
 
     <h3>Team</h3>
 
-    We are a team of 5 software engineers. 3 Executives and a office manager. For more information on our team you can request a meeting with each individual through mailing us at contact@inadsglobal.com.
+    We are a team of 5 software engineers. 3 Executives and a office manager. For more information on our team you can request a meeting with each individual through mailing us at contact@inadsglobal.com or by leaving us a message at + 1 302 440 1598.
 
     <h3>Market Size</h3>
 
