--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -60,7 +60,7 @@
 
     <h3>Market Adoption</h3>
     <ul>
-        <li>Some of the biggest websites/newspapers in the region</li>
+        <li>Some of the biggest websites/newspapers in the region, (Haber3, ABC Gazetesi, Internet Haber)</li>
         <li>~32 billion traffic.</li>
     </ul>
 
