--- a/templates/index.html
+++ b/templates/index.html
@@ -186,5 +186,6 @@
             document.getElementById("titleimage").setAttribute('src', "/logos/titlemobile.png");
         }
     </script>
+    <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
 </body>
 </html>
