--- a/templates/corporate.html
+++ b/templates/corporate.html
@@ -23,6 +23,7 @@
         <h3>651 N Broad St, Suite 206, Middletown, 19709, New Castle, Delaware</h3>
         <hr>
         <h2>Istanbul</h2>
+        <h3>+90 850 441 2415 (Our Istanbul office might be currently offline due to Covid-19)</h3>
         <h3>Bahçeşehir 1. kısım, Asmalı cad. No:24</h3>
     </div>
 </body>
