--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -36,7 +36,7 @@
     <h4>Number of Shares: 2000</h4>
     <h4>Pre-Money Valuation: 88,000,000$</h4>
 
-    <h4>Est. Month Revenue: 1.612.800TRY(192.000USD)</h4>
+    <h4>E. Month Revenue: 1.612.800TRY(192.000USD)</h4>
     <hr>
 
     <h3>What problems we solve?</h3>
