--- a/templates/corporate.html
+++ b/templates/corporate.html
@@ -5,7 +5,7 @@
     <title>InAds - Corporate</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
-<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5">
+<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5; background-color: black; color: white">
     <link rel="stylesheet" type="text/css" href="/styles">
 
         <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%">
