--- a/templates/corporate.html
+++ b/templates/corporate.html
@@ -5,7 +5,7 @@
     <title>InAds - Corporate</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
-<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5; background-color: gray; color: white">
+<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5; color: white">
     <link rel="stylesheet" type="text/css" href="/styles">
 
         <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%">
@@ -29,7 +29,7 @@
         <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
         <!-- End TrustBox script -->
                 <!-- TrustBox widget - Micro Review Count -->
-        <div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="60ba88c1f86baa0001ba7d75" data-style-height="24px" data-style-width="100%" data-theme="dark">
+        <div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="60ba88c1f86baa0001ba7d75" data-style-height="24px" data-style-width="100%" data-theme="light">
           <a href="https://www.trustpilot.com/review/inadsglobal.com" target="_blank" rel="noopener">Trustpilot</a>
         </div>
         <!-- End TrustBox widget -->
