--- a/templates/index.html
+++ b/templates/index.html
@@ -183,6 +183,7 @@
     <script>
         if(window.innerWidth < window.innerHeight){
             document.getElementById("infoDiv").style.marginLeft = "25px";
+            document.location = "/mobile"
             document.getElementById("titleimage").setAttribute('src', "/logos/titlemobile.png");
         }
     </script>
