--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -96,10 +96,10 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
           <div class="overlay-content">
-            <a href="/docs">Docs</a>
-            <a href="/estimated_earnings">Estimated Earnings</a>
-            <a href="/login">Login</a>
-            <a href="/register">Register</a>
+            <a href="/docs"><h2>Docs</h2></a>
+            <a href="/estimated_earnings"><h2>Estimated Earnings</h2></a>
+            <a href="/login"><h2>Login</h2></a>
+            <a href="/register"><h2>Register</h2></a>
           </div>
 
         </div>
