--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -90,7 +90,7 @@
     </style>
     <div>
         <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 0%">
-            <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
+            <span class="navbarElement" style="margin-left: 3%">InAds</span>
             <div id="myNav" class="overlay">
 
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -104,7 +104,7 @@
 
         </div>
 
-        <span onclick="openNav()" class="navbarElement" style="font-size: 30px; float: right; margin-right: 5%; margin-top: 0%">&#9776;</span>
+        <span onclick="openNav()" class="navbarElement" style="font-size: 30px; float: right; margin-right: 5%;">&#9776;</span>
 
         </div>
         <hr style="opacity: 0">
