--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -104,7 +104,7 @@
 
         </div>
 
-        <span onclick="openNav()" class="navbarElement" style="font-size: 30px; float: right; margin-right: 5%;">&#9776;</span>
+        <span onclick="openNav()" class="navbarElement" style="float: right; margin-right: 5%;">&#9776;</span>
 
         </div>
         <hr style="opacity: 0">
