--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -90,7 +90,7 @@
     </style>
     <div>
         <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 0%">
-            <span class="navbarElement" style="margin-left: 3%">InAds</span>
+            <span class="navbarElement" style="margin-left: 3%" onclick="openNav()" >InAds</span>
             <div id="myNav" class="overlay">
 
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
