--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     <div class="alertbox" hidden="true" id="alert-box">Passwords do not match</div>
     <div class="alertbox" hidden="true" id="alert-form">You need to fill all the fields bellow to submit the form</div>
     <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%; position: fixed">
-        <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
+        <img src="/logos/webicon.png" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
         <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
         <a class="navbarElement" href="/plans"><small>Plans</small></a>
         <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
