--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -202,6 +202,6 @@
           document.getElementById("myNav").style.width = "0%";
         }
     </script>
-    <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" style="width: 20%;" data-account-id="207713366"></script>
+    <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
 </body>
 </html>
