--- a/templates/login.html
+++ b/templates/login.html
@@ -6,27 +6,22 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
-<body style="font-family: open sans; width: 100%; height: 100%">
-    <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%">
-        <img src="/logos/webicon.png" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
-        <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
-        <a class="navbarElement" href="/plans"><small>Plans</small></a>
-        <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
-        <a class="navbarElement" href=""><small>Docs</small></a>
-    </div>
-    <center>
-        <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
-    </center>
-    <div style="margin-top: 3%">
-        <form method=post enctype=multipart/form-data>
-            <input style="margin-left: 40%; margin-right:35%" class="mainForm" type=text name=email placeholder="Email">
-            <hr style="margin-left: 40%; margin-right:35%">
-            <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password name=password placeholder="Password">
-            <hr style="margin-left: 40%; margin-right:35%">
-            <input class="buttonGray" style="margin-left: 40%" type=submit value="Login">
+<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 40%, rgb(255, 150, 0) 60%); padding: 0; margin: 0; outline: 0; border: 0">
+
+    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 100vh; width: 40%" src="/logos/loginBG.png" alt="">
+    <div style="margin-top: 0">
+        <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
+            <br>
+            <input style="margin-left: 5%; margin-right:35%" class="mainForm" type=text name=email placeholder="Email">
+            <hr style="margin-left: 5%; margin-right:35%">
+            <input style="margin-left: 5%; margin-right:35%"  class="mainForm" type=password name=password placeholder="Password">
+            <hr style="margin-left: 5%; margin-right:35%">
+            <input class="buttonGray" style="margin-left: 5%" type=submit value="Login">
+            <br>
+            <div style="margin-left: 5%; margin-top: 5%">Do not have an account? <a href="/register" class="navbarElement">Register</a></div>
+            <br>
         </form>
     </div>
     <br>
-    <div style="margin-left: 40%">Do not have an account? <a href="/register" class="navbarElement">Register</a></div>
 </body>
 </html>
