--- a/templates/register.html
+++ b/templates/register.html
@@ -2,32 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>InAds - Register</title>
+    <title>InAds - Login</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
-<body style="font-family: open sans">
-    <div class="alertbox" hidden="true" id="alert-box">Passwords do not match</div>
-    <div class="alertbox" hidden="true" id="alert-form">You need to fill all the fields bellow to submit the form</div>
-    <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%; position: fixed">
-        <img src="/logos/webicon.png" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
-        <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
-        <a class="navbarElement" href="/plans"><small>Plans</small></a>
-        <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
-        <a class="navbarElement" href=""><small>Docs</small></a>
-    </div>
-    <center>
-        <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
-    </center>
-    <div style="margin-top: 3%">
-        <form id="form-id" method=post enctype=multipart/form-data>
+<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 40%, rgb(255, 150, 0) 60%); padding: 0; margin: 0; outline: 0; border: 0">
+
+    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 100vh; width: 40%" src="/logos/loginBG.png" alt="">
+    <div style="margin-top: 0">
+        <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
             <div id="form-mail-registration">
-                <input style="margin-left: 40%; margin-right:35%;" class="mainForm" type=text name=email placeholder="Email" required>
-                <hr style="margin-left: 40%; margin-right:35%">
-                <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
-                <hr style="margin-left: 40%; margin-right:35%">
-                <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
-                <hr style="margin-left: 40%; margin-right:35%">
+                <br>
+                <input style="margin-left: 40%; margin-right:20%;" class="mainForm" type=text name=email placeholder="Email" required>
+                <hr style="margin-left: 40%; margin-right:20%">
+                <input style="margin-left: 40%; margin-right:20%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
+                <hr style="margin-left: 40%; margin-right:20%">
+                <input style="margin-left: 40%; margin-right:20%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
+                <hr style="margin-left: 40%; margin-right:20%">
                 <select style="margin-left: 40%;" size="margin-left: 40%" name="purpose" class="mainForm" id="rgstr" required>
                     <option value="Advertiser">Your Purpose</option>
                     <option value="Content Creator">Content Creator</option>
@@ -35,35 +26,13 @@
                 </select>
                 <hr style="margin-left: 40%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type="button" onclick="validator()" value="Register">
+                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%; width: 50%" type="button" onclick="validator()" value="Register">
+                <div style="margin-left: 40%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
+                <br>
             </div>
+
         </form>
     </div>
     <br>
-    <div style="margin-left: 40%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
-    <br>
-    <script>
-        function validator(){
-            const formElements = document.getElementsByTagName("input")
-
-            for(let i = 0; i < formElements.length; i++){
-                if(formElements[i].value.length < 3){
-                    document.getElementById("alert-form").hidden = false;
-                    return;
-                }
-            }
-
-            const passOrigin = document.getElementById("passOrigin").value
-            const passAgain = document.getElementById("passAgain").value
-            if(passAgain != passOrigin){
-                document.getElementById("alert-box").hidden = false;
-                return;
-            }
-
-
-
-            document.getElementById("form-id").submit()
-        }
-    </script>
 </body>
 </html>
