--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 40%, rgb(255, 150, 0) 60%); padding: 0; margin: 0; outline: 0; border: 0">
 
-    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 100vh; width: 40%" src="/logos/loginBG.png" alt="">
+    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 40%; width: 40%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
         <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
             <br>
