--- a/templates/login.html
+++ b/templates/login.html
@@ -8,13 +8,13 @@
 </head>
 <body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 0%, rgb(255, 150, 0) 60%); padding: 0; margin: 0; outline: 0; border: 0">
 
-    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 40%; width: 40%" src="/logos/loginBG.png" alt="">
+    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 250px; width: 250px; margin-top: 30vh; margin-left: 15%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
         <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
             <br>
-            <input style="margin-left: 5%; margin-right:35%" class="mainForm" type=text name=email placeholder="Email">
+            <input style="margin-left: 5%; margin-right:35%; width: 60%" class="mainForm" type=text name=email placeholder="Email">
             <hr style="margin-left: 5%; margin-right:35%">
-            <input style="margin-left: 5%; margin-right:35%"  class="mainForm" type=password name=password placeholder="Password">
+            <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password name=password placeholder="Password">
             <hr style="margin-left: 5%; margin-right:35%">
             <input class="buttonGray" style="margin-left: 5%; width: 50%" type=submit value="Login">
             <br>
@@ -22,6 +22,8 @@
             <br>
         </form>
     </div>
+    <h1 style="font-family: open sans; clear:both; margin-left: 15%; font-size:40px; background: -webkit-linear-gradient(white, rgb(120, 255, 255)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">InAds - Login</h1>
+
     <br>
 </body>
 </html>
