--- a/templates/register.html
+++ b/templates/register.html
@@ -8,18 +8,18 @@
 </head>
 <body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 0%, rgb(255, 150, 0) 60%); padding: 0; margin: 0; outline: 0; border: 0">
 
-    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 100vh; width: 40%" src="/logos/loginBG.png" alt="">
+    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 250px; width: 250px; margin-top: 30vh; margin-left: 15%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
         <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
             <div id="form-mail-registration">
                 <br>
-                <input style="margin-left: 40%; margin-right:20%;" class="mainForm" type=text name=email placeholder="Email" required>
+                <input style="margin-left: 40%; margin-right:20%; width: 60%" class="mainForm" type=text name=email placeholder="Email" required>
                 <hr style="margin-left: 40%; margin-right:20%">
-                <input style="margin-left: 40%; margin-right:20%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
+                <input style="margin-left: 40%; margin-right:20%; width: 60%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
                 <hr style="margin-left: 40%; margin-right:20%">
-                <input style="margin-left: 40%; margin-right:20%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
+                <input style="margin-left: 40%; margin-right:20%; width: 60%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
                 <hr style="margin-left: 40%; margin-right:20%">
-                <select style="margin-left: 40%;" size="margin-left: 40%" name="purpose" class="mainForm" id="rgstr" required>
+                <select style="margin-left: 40%;; width: 60%" name="purpose" class="mainForm" id="rgstr" required>
                     <option value="Advertiser">Your Purpose</option>
                     <option value="Content Creator">Content Creator</option>
                     <option value="Advertiser">Advertiser</option>
@@ -30,9 +30,9 @@
                 <div style="margin-left: 40%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
                 <br>
             </div>
-
         </form>
     </div>
+    <h1 style="font-family: open sans; clear:both; margin-left: 15%; font-size:40px; background: -webkit-linear-gradient(white, rgb(120, 255, 255)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">InAds - Register</h1>
     <br>
 </body>
 </html>
