--- a/templates/register.html
+++ b/templates/register.html
@@ -13,21 +13,21 @@
         <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
             <div id="form-mail-registration">
                 <br>
-                <input style="margin-left: 40%; margin-right:20%; width: 60%" class="mainForm" type=text name=email placeholder="Email" required>
-                <hr style="margin-left: 40%; margin-right:20%">
-                <input style="margin-left: 40%; margin-right:20%; width: 60%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
-                <hr style="margin-left: 40%; margin-right:20%">
-                <input style="margin-left: 40%; margin-right:20%; width: 60%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
-                <hr style="margin-left: 40%; margin-right:20%">
-                <select style="margin-left: 40%;; width: 60%" name="purpose" class="mainForm" id="rgstr" required>
+                <input style="margin-left: 5%; margin-right:35%; width: 60%" class="mainForm" type=text name=email placeholder="Email" required>
+                <hr style="margin-left: 5%; margin-right:35%">
+                <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
+                <hr style="margin-left: 5%; margin-right:35%">
+                <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
+                <hr style="margin-left: 5%; margin-right:35%">
+                <select style="margin-left: 5%;; width: 60%" name="purpose" class="mainForm" id="rgstr" required>
                     <option value="Advertiser">Your Purpose</option>
                     <option value="Content Creator">Content Creator</option>
                     <option value="Advertiser">Advertiser</option>
                 </select>
-                <hr style="margin-left: 40%; margin-right:35%">
+                <hr style="margin-left: 5%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%; width: 50%" type="button" onclick="validator()" value="Register">
-                <div style="margin-left: 40%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
+                <input class="buttonGray" style="margin-left: 5%; width: 50%" type="button" onclick="validator()" value="Register">
+                <div style="margin-left: 5%; margin-top: 5%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
                 <br>
             </div>
         </form>
