--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
             </div>
         </form>
     </div>
-    <h1 style="font-family: open sans; clear:both; margin-left: 15%; font-size:40px; background: -webkit-linear-gradient(white, rgb(120, 255, 255)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">InAds - Register</h1>
+    <h1 style="font-family: open sans; clear:both; margin-left: 15%; font-size:40px; background: -webkit-linear-gradient(rgb(0, 150, 180), rgb(0, 120, 150)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">InAds - Register</h1>
     <br>
 </body>
 </html>
