--- a/templates/login.html
+++ b/templates/login.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>InAds - Login</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
-<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 0%, rgb(0, 100, 120) 60%); padding: 0; margin: 0; outline: 0; border: 0">
+<body style="font-family: Source Sans Pro; width: 100%; height: 100%; background: linear-gradient(90deg, rgb(250, 150, 150) 0%, rgb(0, 200, 220) 60%); padding: 0; margin: 0; outline: 0; border: 0">
 
     <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 250px; width: 250px; margin-top: 30vh; margin-left: 15%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
