--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,11 @@
     </div>
     <h1 style="font-family: open sans; clear:both; margin-left: 15%; font-size:40px; background: -webkit-linear-gradient(rgb(0, 150, 180), rgb(0, 120, 150)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">InAds - Login</h1>
     <br>
+    <script>
+        if(window.innerWidth < window.innerHeight){
+            document.location = "/login/mobile"
+        }
+    </script>
     <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
 </body>
 </html>
