--- a/templates/register.html
+++ b/templates/register.html
@@ -34,6 +34,11 @@
     </div>
 
     <br>
+    <script>
+        if(window.innerWidth < window.innerHeight){
+            document.location = "/register/mobile"
+        }
+    </script>
     <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
 </body>
 </html>
