--- a/templates/register_mobile.html
+++ b/templates/register_mobile.html
@@ -6,34 +6,37 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
-<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, rgb(250, 150, 150) 0%, rgb(0, 200, 220) 60%); padding: 0; margin: 0; outline: 0; border: 0">
+<body style="font-family: open sans; width: 100%; height: 100%; background-color: white; padding: 0; margin: 0; outline: 0; border: 0">
 
-    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 250px; width: 250px; margin-top: 30vh; margin-left: 15%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
-        <form method=post enctype=multipart/form-data style="margin-top: 25vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
+        <form method=post enctype=multipart/form-data style="background-color: white; width: 100%;">
             <div id="form-mail-registration">
+                <h1 style="font-size: 80px; margin-left: 5%">InAds</h1>
+                <h2 style="font-size: 40px; margin-left: 5%">Register</h2>
+                <input style="margin-left: 5%; width: 70%; height: 50px; margin-top: 5vh; font-size: 40px" class="mainForm" type=text name=email placeholder="Email" required>
+                <hr style="margin-left: 5%; margin-right:35%">
                 <br>
-                <input style="margin-left: 5%; margin-right:35%; width: 60%" class="mainForm" type=text name=email placeholder="Email" required>
+                <input style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
+                <br>
                 <hr style="margin-left: 5%; margin-right:35%">
-                <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
+                <br>
+                <input style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
                 <hr style="margin-left: 5%; margin-right:35%">
-                <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
-                <hr style="margin-left: 5%; margin-right:35%">
-                <select style="margin-left: 5%;; width: 60%" name="purpose" class="mainForm" id="rgstr" required>
+                <br>
+                <select style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px" name="purpose" class="mainForm" id="rgstr" required>
                     <option value="Advertiser">Your Purpose</option>
                     <option value="Content Creator">Content Creator</option>
                     <option value="Advertiser">Advertiser</option>
                 </select>
                 <hr style="margin-left: 5%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 5%; width: 50%" type="button" onclick="validator()" value="Register">
-                <div style="margin-left: 5%; margin-top: 5%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
+                <input class="buttonGray" style="margin-left: 5%; width: 50%; font-size: 50px" type="button" onclick="validator()" value="Register">
+                <div style="margin-left: 5%; margin-top: 5%; font-size: 50px">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
                 <br>
             </div>
         </form>
     </div>
 
     <br>
-    <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
 </body>
 </html>
